2003/09/21 19:55 kaffeetisch

	* TODO: Remove GnomePixmap. It's deprecated.

	* t/GnomeClient
	* t/GnomeClienReal: Fix indention.

	* xs/GnomeClient.xs: Fix gnome_client_request_interaction.  Should work
	now, but doesn't.

2003/09/21 18:24 kaffeetisch

	* xs/GnomeIconTheme.xs: Free strdup'ed strings.

2003/09/21 17:46 kaffeetisch

	* Makefile.PL: Use libbonoboui instead of libbonobo as the hash key to
	generate correct macros.

	* xs/Gnome2.xs: Implement gnome_get_version_info and
	bonobo_get_version_info.

	* t/GnomeEntry.t
	* t/GnomeIconTheme.t
	* t/GnomeThumbnail.t: Use the new version methods to find out if certain
	tests are to be skipped.

2003/09/21 11:00 muppetman

	* Makefile.PL, gnome2perl.h: add a slight hack to generate version-
	checking macros a la GTK_CHECK_VERSION for the libraries that don't
	do that for us.

	* xs/GnomeIconEntry.xs: use the shiny new LIBGNOMEUI_CHECK_VERSION() to
	avoid trying to compile gnome_icon_entry_set_max_saved on versions
	prior to 2.3.3 (because they don't have it).

2003/09/21 16:06 kaffeetisch

	* TODO: Updated to reflect recent changes.

2003/09/21 00:05 muppetman (EDT, not back in time)

	* AUTHORS: torsten forgot to credit himself :-)

	* xs/GnomeIconLookup.xs, xs/GnomeIconTheme.xs, xs/GnomeThumbnail.xs:
	GnomeIconTheme and GnomeThumbnailFactory didn't appear until about 2.0.6,
	according to the changelogs for libgnomeui.  only compile this stuff if
	we have the right types defined.

2003/09/20 23:32 rwmcfa1

	* xs/GnomeIconTheme.xs: list -> results, type-o i guess. wouldn't 
	compile now does.

2003/09/21 02:00 kaffeetisch

	Big overhaul.

	* Makefile.PL
	* genmaps.pl
	* gnome2perl.h: Add libbonoboui to the requirements.

	* maps: Add Bonobo typemaps.

	A xs/BonoboDock.xs
	A xs/BonoboDockItem.xs,
	* MANIFEST: First parts of Bonobo.  Necessary for GnomeApp and
	GnomeAppHelper.

	* xs/GnomeAbout.xs: Fix indention.

	* xs/GnomeApp.xs: Provide member accessors.  Implement
	gnome_app_add_toolbar, gnome_app_add_docked,